Fix half off screen and misc.

--- a/NotFish/TemplateData/style.css
+++ b/NotFish/TemplateData/style.css
@@ -15,18 +15,22 @@ html,body,div,canvas { margin: 0; padding: 0; }
 ****************************************/
 
 html, body {
+	width: 100%;
+	height: 100%;
 	font-family: 'Raleway', sans-serif;
 	font-size: 1.5em;
-	text-align: center;
 	background-color: #eee;
 	margin: 0px;
 	padding: 0px;
 }
+
 #header {
 	height: 150px;
+	text-align: center;
 }
 #footer {
 	padding-top: 10px;
+	text-align: center;
 }
 
 
@@ -46,7 +50,7 @@ a:hover {
 
 
 .content {
-    display: block;
+    display: inline-block;
     position: relative;
     width: 100%;
 }
